# rapp-robots-api

./: .gitignore  README.md  package.xml
cpp/: CMakeLists.txt  README.md
cpp/cmake/: RappRobotsConfig.cmake.in
cpp/doc/: Doxyfile  convertall.sh  glue.sh  intro.md
cpp/implementations/: CMakeLists.txt  communication.cpp  info.cpp  localization.cpp  navigation.cpp  vision.cpp
cpp/includes/: CMakeLists.txt
cpp/includes/rapp-robots-api/: CMakeLists.txt
cpp/includes/rapp-robots-api/communication/: README.md  communication.hpp  includes.ihh
cpp/includes/rapp-robots-api/info/: README.md  info.hpp
cpp/includes/rapp-robots-api/localization/: README.md  includes.ihh  localization.hpp
cpp/includes/rapp-robots-api/navigation/: README.md  includes.ihh  navigation.hpp
cpp/includes/rapp-robots-api/vision/: README.md  includes.ihh  vision.hpp
python/: README.md
python/abstract_classes/: rapp_robot_api.py  rapp_robot_api_audio.py  rapp_robot_api_humanoid_motion.py  rapp_robot_api_interaction.py  rapp_robot_api_motion.py  rapp_robot_api_sensors.py  rapp_robot_api_vision.py
python/examples/: README.md  audio_example.py  device_agnostic_example.py  full_nao_check.py  humanoid_hands_example.py  movement_examples.py  posture_examples.py  sensors_test.py  speech_recognition.py  vision_test.py  vision_test_from_pc.py
python/implementations/_dummy/: rapp_dummy_api_interaction.py  rapp_robot_api.py  test_abstract.py
python/implementations/implementation_template/: rapp_DEVICE_api.py  rapp_DEVICE_api_audio.py  rapp_DEVICE_api_humanoid_motion.py  rapp_DEVICE_api_motion.py  rapp_DEVICE_api_sensors.py  rapp_DEVICE_api_vision.py  rapp_robot_api.py
python/implementations/kobuki/: rapp_kobuki_api_audio.py  rapp_kobuki_api_humanoid_motion.py  rapp_kobuki_api_motion.py  rapp_kobuki_api_vision.py  rapp_robot_api.py
python/implementations/nao_v4_naoqi2.1.4/: README.md  nao_connectivity  rapp_nao_api_audio.py  rapp_nao_api_humanoid_motion.py  rapp_nao_api_motion.py  rapp_nao_api_sensors.py  rapp_nao_api_utilities.py  rapp_nao_api_vision.py  rapp_nao_unit_tests.py  rapp_robot_api.py
python/templates/: rapp_robot_api.py
