IF(${BUILD_ALL})
	SET(BUILD_IMPL_VISION "ON")
	SET(BUILD_IMPL_NAVIGATION "ON")
	SET(BUILD_IMPL_COMMUNICATION "ON")
ENDIF()

IF(${BUILD_IMPL_VISION})

MESSAGE(STATUS "Building vision lib")

SET(VISION_LIB rapp_robot_vision)

add_library(${VISION_LIB} SHARED
	vision.cpp
)

target_link_libraries(${VISION_LIB}
	${RAPP_SHARED_NAME}
)

install (TARGETS ${VISION_LIB} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
GET_PROPERTY(FULL_VISION_NAME TARGET ${VISION_LIB} PROPERTY LOCATION)

MESSAGE(STATUS ${FULL_VISION_NAME})

SET(RAPP_SHARED_LIBS ${RAPP_SHARED_LIBS} ${FULL_VISION_NAME} PARENT_SCOPE)

ENDIF()



IF(${BUILD_IMPL_COMMUNICATION})

MESSAGE(STATUS "Building communication lib")

SET(COMMUNICATION_LIB rapp_robot_communication)

add_library(${COMMUNICATION_LIB} SHARED
	communication.cpp
)

target_link_libraries(${COMMUNICATION_LIB}
	${RAPP_SHARED_NAME}
)

install (TARGETS ${COMMUNICATION_LIB} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
GET_PROPERTY(FULL_COMMUNICATION_NAME TARGET ${COMMUNICATION_LIB} PROPERTY LOCATION)

MESSAGE(STATUS ${FULL_COMMUNICATION_NAME})

SET(RAPP_SHARED_LIBS ${RAPP_SHARED_LIBS} ${FULL_COMMUNICATION_NAME} PARENT_SCOPE)

ENDIF()

IF(${BUILD_IMPL_NAVIGATION})

MESSAGE(STATUS "Building navigation lib")

SET(NAVIGATION_LIB rapp_robot_navigation)

add_library(${NAVIGATION_LIB} SHARED
	navigation.cpp
)

target_link_libraries(${NAVIGATION_LIB}
	${RAPP_SHARED_NAME}
)

install (TARGETS ${NAVIGATION_LIB} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/)
GET_PROPERTY(FULL_NAVIGATION_NAME TARGET ${NAVIGATION_LIB} PROPERTY LOCATION)

MESSAGE(STATUS ${FULL_NAVIGATION_NAME})

SET(RAPP_SHARED_LIBS ${RAPP_SHARED_LIBS} ${FULL_NAVIGATION_NAME} PARENT_SCOPE)

ENDIF()
